[package]
authors = [
    "Carl Lerche <me@carllerche.com>",
    "Andrew Cann <shum@canndrew.org>",
]
description = "tokio-based uTP implementation"
documentation = "https://docs.rs/tokio-utp"
license = "MIT/Apache-2.0"
name = "tokio-utp"
repository = "https://github.com/maidsafe/tokio-utp"
version = "0.3.0"

[dependencies]
arraydeque = "~0.4.2"
byteorder = "1.0"
bytes = "0.4"
future-utils = "0.9.0"
futures = "0.1.16"
log = "0.3.7"
mio = "0.6.9"
net-literals = "0.1.2"
rand = "0.4"
slab = "0.4.0"
smallvec = "0.4"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
unwrap = "1.1.0"
void = "1"

[dev-dependencies]
env_logger = "0.4.2"
hamcrest = "~0.1.5"

[features]
default = ["netsim"]
[target."cfg(target_os = \"linux\")".dependencies.netsim]
optional = true
version = "~0.2.2"
