[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "tokio-based uTP implementation"
documentation = "https://docs.rs/tokio-utp"
license = "MIT OR BSD-3-Clause"
name = "tokio-utp"
repository = "https://github.com/maidsafe/tokio_utp"
version = "0.3.0"

[dependencies]
arraydeque = "~0.4.2"
byteorder = "1.0"
bytes = "0.4"
future-utils = "0.9.0"
futures = "0.1.16"
log = "0.3.7"
mio = "0.6.9"
net-literals = "0.1.2"
# TODO(povilas): need to update libc in netsim so that we could use latest
# version V
nix = "0.10.0"
rand = "0.4"
slab = "0.4.0"
smallvec = "0.4"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
unwrap = "~1.2.0"
void = "1"

[dev-dependencies]
env_logger = "0.4.2"
hamcrest = "~0.1.5"

[features]
default = ["netsim"]
[target."cfg(target_os = \"linux\")".dependencies.netsim]
optional = true
version = "~0.2.3"
